# beak-py

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  run_parallel.sh
docs/: openvm_bucket_workflow_commands.md  sp1_bucket_workflow_commands.md
fuzz_results/worker_1/guest/src/: main.rs
fuzz_results/worker_1/host/src/: main.rs
fuzz_results/worker_2/guest/src/: main.rs
fuzz_results/worker_2/host/src/: main.rs
fuzz_results/worker_3/: Cargo.toml
fuzz_results/worker_3/guest/src/: main.rs
fuzz_results/worker_3/host/: Cargo.toml
fuzz_results/worker_3/host/src/: main.rs
fuzz_results/worker_4/guest/: Cargo.toml
fuzz_results/worker_4/guest/src/: main.rs
fuzz_results/worker_4/host/src/: main.rs
libs/beak-core/: pyproject.toml
libs/beak-core/beak_core/: buckets.py  fuzzing_seeds.py  generator.py  micro_ops.py  oracle.py  rv32im.py  rv32im_micro_ops.py  types.py
libs/beak-core/beak_core/demos/: __init__.py  pico_bool_domain_is_real.py
libs/beak-core/tests/: test_buckets.py  test_fuzzing_seeds.py  test_generator.py  test_oracle.py  test_rv32im.py
libs/circil/circil/fuzzer/: base.py
libs/circil/circil/ir/: operator.py
libs/circil/circil/rewrite/: tokenizer.py
libs/zkvm-fuzzer-utils/: pyproject.toml  requirements.txt
libs/zkvm-fuzzer-utils/tests/: test_record.py
libs/zkvm-fuzzer-utils/zkvm_fuzzer_utils/: cli.py  cmd.py  common.py  git.py  kinds.py  project.py  record.py
libs/zkvm-fuzzer-utils/zkvm_fuzzer_utils/rust/: common.py
projects/jolt-fuzzer/: README.md  pyproject.toml
projects/jolt-fuzzer/jolt_fuzzer/: cli.py  fuzzer.py  settings.py  zkvm_project.py
projects/jolt-fuzzer/jolt_fuzzer/templates/: guest_cargo.toml.j2  guest_lib.rs.j2  guest_main.rs.j2  host_main.rs.j2  root_cargo.toml.j2  rust-toolchain.toml.j2
projects/jolt-fuzzer/jolt_fuzzer/zkvm_repository/: install.py
projects/jolt-fuzzer/tests/: test_jolt_project_setup.py
projects/nexus-fuzzer/: README.md  pyproject.toml
projects/nexus-fuzzer/nexus_fuzzer/: cli.py  fuzzer.py  settings.py  zkvm_project.py
projects/nexus-fuzzer/nexus_fuzzer/templates/: guest_cargo.toml.j2  guest_config.toml.j2  guest_main.rs.j2  host_cargo.toml.j2  host_main.rs.j2  root_cargo.toml.j2  rust-toolchain.toml.j2
projects/nexus-fuzzer/nexus_fuzzer/zkvm_repository/: install.py
projects/nexus-fuzzer/tests/: test_nexus_project_setup.py
projects/openvm-fuzzer/: Dockerfile  pyproject.toml  requirements.txt
projects/openvm-fuzzer/openvm_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  utils_install.py  utils_trace.py  zkvm_project.py
projects/openvm-fuzzer/openvm_fuzzer/patches/: __init__.py  add_fuzzer_utils_workspace.py  create_fuzzer_utils_crate.py  overwrite_rv32im_cores.py  patch_integration_api_microops.py  patch_padding_samples.py  patch_segment_and_regzero_microops.py  rewrite_private_stark.py  rv32im_circuit_add_deps.py  rv32im_replace_asserts.py  transpiler_remove_protection.py  vm_add_serde_json.py  vm_replace_asserts.py
projects/openvm-fuzzer/openvm_fuzzer/patches/fuzzer_utils_crate/: lib.rs
projects/openvm-fuzzer/openvm_fuzzer/patches/injection_sources/: __init__.py
projects/openvm-fuzzer/openvm_fuzzer/patches/injection_sources/ca36de3/: __init__.py  segment_rs.py
projects/openvm-fuzzer/openvm_fuzzer/templates/: guest_cargo.toml.j2  guest_main.rs.j2  host_cargo.toml.j2  host_main.rs.j2
projects/openvm-fuzzer/openvm_fuzzer/templates/fuzzer_utils_crate/: Cargo.toml.j2  lib.rs.j2
projects/openvm-fuzzer/openvm_fuzzer/zkvm_repository/: fuzzer_utils_crate.py  injection.py  install.py
projects/openvm-fuzzer/tests/: test_openvm_project_setup.py
projects/pico-fuzzer/: README.md  pyproject.toml
projects/pico-fuzzer/pico_fuzzer/: adapter.py  cli.py  fuzzer.py  settings.py  zkvm_project.py
projects/pico-fuzzer/pico_fuzzer/templates/: app_cargo.toml.j2  app_main.rs.j2  prover_cargo.toml.j2  prover_main.rs.j2  root_cargo.toml.j2  rust-toolchain.toml.j2
projects/pico-fuzzer/pico_fuzzer/zkvm_repository/: injection.py  install.py
projects/pico-fuzzer/tests/: test_pico_project_setup.py
projects/risc0-fuzzer/: README.md  pyproject.toml
projects/risc0-fuzzer/risc0_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  zkvm_project.py
projects/risc0-fuzzer/risc0_fuzzer/templates/: guest_cargo.toml.j2  guest_main.rs.j2  host_cargo.toml.j2  host_main.rs.j2  methods_cargo.toml.j2  methods_lib.rs.j2  root_cargo.toml.j2
projects/risc0-fuzzer/risc0_fuzzer/zkvm_repository/: install.py
projects/sp1-fuzzer/: README.md  pyproject.toml
projects/sp1-fuzzer/sp1_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  zkvm_project.py
projects/sp1-fuzzer/sp1_fuzzer/templates/: guest_cargo.toml.j2  guest_main.rs.j2  host_cargo.toml.j2  host_main.rs.j2  root_cargo.toml.j2  (+1 more)
riscv-tests-artifacts/: README.md  rv32ui-v-add.dump  rv32ui-v-addi.dump  rv32ui-v-and.dump  rv32ui-v-andi.dump  rv32ui-v-auipc.dump  rv32ui-v-beq.dump  rv32ui-v-bge.dump  rv32ui-v-bgeu.dump  rv32ui-v-blt.dump  rv32ui-v-bltu.dump  rv32ui-v-bne.dump  rv32ui-v-fence_i.dump  rv32ui-v-jal.dump  rv32ui-v-jalr.dump  rv32ui-v-lb.dump  rv32ui-v-lbu.dump  rv32ui-v-ld_st.dump  rv32ui-v-lh.dump  rv32ui-v-lhu.dump  rv32ui-v-lui.dump  rv32ui-v-lw.dump  rv32ui-v-ma_data.dump  rv32ui-v-or.dump  rv32ui-v-ori.dump  rv32ui-v-sb.dump  rv32ui-v-sh.dump  rv32ui-v-simple.dump  rv32ui-v-sll.dump  rv32ui-v-slli.dump  rv32ui-v-slt.dump  rv32ui-v-slti.dump  rv32ui-v-sltiu.dump  rv32ui-v-sltu.dump  rv32ui-v-sra.dump  rv32ui-v-srai.dump  rv32ui-v-srl.dump  rv32ui-v-srli.dump  rv32ui-v-st_ld.dump  rv32ui-v-sub.dump  (+17 more)
scripts/: chip_row_records.py  extract_initial_seeds.py  openvm_bucket_workflow.py  render_openvm_microops_md.py  sp1_bucket_workflow.py  workflow_common.py
seeds/: initial.jsonl
(+3 files in other folders)
