[project]
name = "beak-py"
version = "0.1.0"
description = "A monorepo for zkVM fuzzing"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "zkvm-fuzzer-utils",
    "openvm-fuzzer",
    "sp1-fuzzer",
    "risc0-fuzzer",
    "pico-fuzzer",
    "jolt-fuzzer",
    "nexus-fuzzer",
    "beak-core",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pyright>=1.1.386",
]

[tool.uv]
workspace = { members = ["libs/*", "projects/*"] }

[tool.uv.sources]
zkvm-fuzzer-utils = { workspace = true }
openvm-fuzzer = { workspace = true }
sp1-fuzzer = { workspace = true }
risc0-fuzzer = { workspace = true }
pico-fuzzer = { workspace = true }
jolt-fuzzer = { workspace = true }
nexus-fuzzer = { workspace = true }
beak-core = { workspace = true }

[tool.black]
line-length = 100
target-version = ['py310']
extend-exclude = '''
'''

[tool.pylint."messages control"]
ignore = []
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
    "libs/beak-core",
    "libs/zkvm-fuzzer-utils",
    "projects/openvm-fuzzer",
    "projects/sp1-fuzzer",
    "projects/risc0-fuzzer",
    "projects/pico-fuzzer",
    "projects/jolt-fuzzer",
    "projects/nexus-fuzzer",
]
testpaths = ["libs", "projects"]
