[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "beak-core"
version = "0.1.0"
description = "Core logic for beak fuzzer"
requires-python = ">=3.10"
dependencies = [
    "unicorn>=2.1.4",
    "pyelftools>=0.32",
    "jinja2>=3.1.6"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.setuptools.packages.find]
include = ["beak_core*"]
