
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openvm-fuzzer"
version = "0.0.1"
description="Fuzzer for the OpenVM zkVM"
requires-python = ">= 3.10"
authors = []
readme = "README.md"
dependencies = [
  "zkvm-fuzzer-utils",
  "beak-core",
  "jinja2"
]

[project.scripts]
openvm-fuzzer = "openvm_fuzzer.cli:app"

[tool.setuptools.packages.find]
include = ["openvm_fuzzer*"]
exclude = []

[tool.setuptools.package-data]
openvm_fuzzer = ["templates/**/*", "patches/fuzzer_utils_crate/**/*"]
